styles.css
body {
    background-image: url("images/space\ pixel\ GIF.gif");
    /*margin-top: 50px;*/
}

h1 {
    color: #9a8c98;
    text-align: center;
    font-size: 100px;
}

h2 {
    color: #C9ADA7;
    text-align: center;
    font-size: 80px;
}

h3 {
    color: #9a8c98;
    text-align: center;
    font-size: 60px;
}

.msg-box {
    background: rgba(255, 255, 255, 0.15);
    -webkit-backdrop-filter: blur(7px);
    backdrop-filter: blur(7px);
    border: 2px solid rgba(158, 171, 224, 0.992);
    border-radius: 20px; 
    margin: 250px 500px;
    padding: 30px 20px;
}

.welcome-msg {
    color: rgb(143, 179, 241);
    text-align: center;
    font-size: 40px;
    font-weight: bold;
}

.msg {
   color: #F2E9E4;
   text-align: center;
   font-size: 25px;
}

.arr-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 10px 190px;
    padding: 12px 24px;
    background-color: #a4bfea;
    border: 1px solid white;
    border-radius: 50%;
    font-size: 40px;
    text-decoration: none;
    color: white;
    transition: background-color 0.3s ease;
}

.arr-btn:hover {
    background-color: #759dde;
}

.two-btns {
    display: flex;
    /*flex-direction: row;*/
    justify-content: center;
    align-items: center;
}

#input-el {
    background: rgba(255, 255, 255, 0.15);
    -webkit-backdrop-filter: blur(7px);
    backdrop-filter: blur(7px);
    border: 2px solid rgba(158, 171, 224, 0.992);
    border-radius: 50px;
    display: block;
    margin: 10px auto;
    font-family:'Times New Roman', Times, serif;
    font-size: 20px;
    text-align: center;
    color: #F2E9E4;
    width: 400px;
    padding: 10px 20px
}

#module-list {
    color: #C9ADA7;
    display: block;
    margin: 10px auto;
    font-family:'Times New Roman', Times, serif;
    font-size: 40px;
    text-align: center;
    padding-left: 0px; 
}

